--- a/html/example1.html
+++ b/html/example1.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First push</title>
+    <link rel="stylesheet" href="../css/ex1.css">
 </head>
 <body>
-    <h1>Hi I'm Rohit from GrayMatter</h1>
+    <h1 class="hi">Hi I'm Rohit from GrayMatter</h1>
 </body>
 </html>
